config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: use-case-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1  
  selector:
    matchLabels:
      app: use-case
  template:
    metadata:
      labels:
        app: use-case
    spec:
      containers:
      - name: use-case
        image: 058264089626.dkr.ecr.eu-central-1.amazonaws.com/devops-use-case:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        securityContext: 
          runAsUser: 1000  
          runAsGroup: 3000
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
