config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: use-case-service
spec:
  selector:
    app: use-case
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
